Bug 358277 - properly unescape mailto body and html-body, and escape a body headed toward HTML compose so email page location from Camino will work, r=bienvenu, sr=neil